--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-
+ <h1>Example how to connect git from local to github</h1>
+  <p>This is only example how to upload file from local to github, with ssh key, but this only text from local and example only</p>
 </body>
 
 </html>
